Revision history for Acme-CPANAuthors-InMemoriam
================================================

        - Sadly adding Christian Karg.
        - reorganisation of POD (suggested by Gabor Szabo).

1.01    2014-05-02
        - fixed distribution name in META.
        - added LICENSE file.
        - Farewell Andrew, it was a pleasure knowing you.

1.00    2014-01-12
        - added AMORETTE (thanks to ETHER).

0.02    2013-12-22
        - amended skip in test file.

0.01    2013-12-08
        - First version, released in honour of our fallen heroes.